# api_derive

./: Cargo.toml  README.md
api_derive/: Cargo.toml  README.md
api_derive/src/: lib.rs
api_tools/: .gitignore  Cargo.toml
api_tools/src/: db.rs  lib.rs
example/: .env  Cargo.toml  README.md  public_api.json  test.html
example/src/: actors.rs  init.rs  main.rs  model.rs  placeholder.rs  route.rs
example/src/pages/: mod.rs
example/src/test/: api_docs.rs  mod.rs
example/sys-admin/: package.json
example/sys-admin/src/: App.tsx  types.ts
example/sys-admin/src/DataProvider/: api_client.ts  index.ts
example/sys-admin/src/routes/: post.tsx
example/templates/: post.html
