[package]
name = "example"
version = "0.1.0"
authors = ["Andras Mocsary <nobody@reedwolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
api_derive = { path = "../api_derive" }
api_tools = { path = "../api_tools" }
arangoq = "0.3.4"
reqwest = "0.10.7"
dotenv = "0.15.0"
env_logger = "0.7.1"
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-cors = "0.2.0"
actix-identity = "0.2.1"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.5"
schemars = "0.7.6"
validator = { version = "0.10", features = ["phone", "unic"] }
validator_derive = { version = "0.10", features = ["phone", "unic"] }
serde_json = "1.0.57"
json-patch = "0.2.6"

[dev-dependencies]
actix-http-test = "1.0.0"
insta = "0.16.0"
mockito = "0.25.1"
serde_urlencoded = "0.6.1"
bytes = "0.5.4"
actix-service = "1.0.5"
